--- a/mplpro.html
+++ b/mplpro.html
@@ -1,10 +1,10 @@
 <h1>Privacy Policy</h1>
 
 
-<p>Effective date: May 28, 2019</p>
+<p>Effective date: July 20, 2019</p>
 
 
-<p>Global Rewarding Developers ("us", "we", or "our") operates the MPL mobile application (the "Service").</p>
+<p>Global Rewarding Developers ("us", "we", or "our") operates the Vmate Make money mobile application (the "Service").</p>
 
 
 <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</p>
@@ -53,7 +53,7 @@
 </ul>
 
 <h2>Transfer Of Data</h2>
-<p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
+<p>Your information, including Personal Data, may be transferred to â€” and maintained on â€” computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
 <p>If you are located outside India and choose to provide information to us, please note that we transfer the data, including Personal Data, to India and process it there.</p>
 <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
 <p>Earnopedia Developers will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
