--- a/mplpro.html
+++ b/mplpro.html
@@ -1,7 +1,7 @@
 <h1>Privacy Policy</h1>
 
 
-<p>Effective date: September 14, 2019</p>
+<p>Effective date: September 15, 2019</p>
 
 
 <p>Global Rewarding Developers ("us", "we", or "our") operates the Vmate Make money mobile application (the "Service").</p>
@@ -41,7 +41,7 @@
 
 <h2>Use of Data</h2>
     
-<p>Earnopedia Developers uses the collected data for various purposes:</p>    
+<p>Global Rewarding Developers uses the collected data for various purposes:</p>    
 <ul>
     <li>To provide and maintain the Service</li>
     <li>To notify you about changes to our Service</li>
@@ -56,15 +56,15 @@
 <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
 <p>If you are located outside India and choose to provide information to us, please note that we transfer the data, including Personal Data, to India and process it there.</p>
 <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
-<p>Earnopedia Developers will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
+<p>Global Rewarding Developers will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
 
 <h2>Disclosure Of Data</h2>
 
 <h3>Legal Requirements</h3>
-<p>Earnopedia Developers may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
+<p>Global Rewarding Developers may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
 <ul>
     <li>To comply with a legal obligation</li>
-    <li>To protect and defend the rights or property of Earnopedia Developers</li>
+    <li>To protect and defend the rights or property of Global Rewarding Developers</li>
     <li>To prevent or investigate possible wrongdoing in connection with the Service</li>
     <li>To protect the personal safety of users of the Service or the public</li>
     <li>To protect against legal liability</li>
@@ -113,6 +113,6 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
 <ul>
-        <li>By email: mplrewardz@gmail.com</li>
+        <li>By email: paytmgames11@gmail.com</li>
           
         </ul>
