--- a/mplpro.html
+++ b/mplpro.html
@@ -1,10 +1,10 @@
 <h1>Privacy Policy</h1>
 
 
-<p>Effective date: September 15, 2019</p>
+<p>Effective date: March 26, 2020</p>
 
 
-<p>Global Rewarding Developers ("us", "we", or "our") operates the Vmate Make money mobile application (the "Service").</p>
+<p>Global Rewarding Developers ("us", "we", or "our") operates the Applike mobile application (the "Service").</p>
 
 
 <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</p>
@@ -113,6 +113,6 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
 <ul>
-        <li>By email: paytmgames11@gmail.com</li>
+        <li>By email: mplrewardz@gmail.com</li>
           
         </ul>
