--- a/mplpro.html
+++ b/mplpro.html
@@ -4,7 +4,7 @@
 <p>Effective date: March 26, 2020</p>
 
 
-<p>Global Rewarding Developers ("us", "we", or "our") operates the Applike mobile application (the "Service").</p>
+<p>Global Rewarding Developers ("us", "we", or "our") operates the vGamer mobile application (the "Service").</p>
 
 
 <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</p>
@@ -85,6 +85,10 @@
         <p>Google Analytics is a web analytics service offered by Google that tracks and reports website traffic. Google uses the data collected to track and monitor the use of our Service. This data is shared with other Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising network.</p>
                 <p>You may opt-out of certain Google Analytics features through your mobile device settings, such as your device advertising settings or by following the instructions provided by Google in their Privacy Policy: <a href="https://policies.google.com/privacy?hl=en">https://policies.google.com/privacy?hl=en</a></p>        <p>For more information on the privacy practices of Google, please visit the Google Privacy & Terms web page: <a href="https://policies.google.com/privacy?hl=en">https://policies.google.com/privacy?hl=en</a></p>
     </li>
+    <li>
+        <p><strong>Onesignal</strong></p>
+        <p>Onesignal is used as push notification service for notifying users. We encourage you to go through privacy policy <a href="https://onesignal.com/privacy_policy">here</a></p>
+    </li>
             <li>
         <p><strong>Firebase</strong></p>
         <p>Firebase is analytics service provided by Google Inc.</p>
@@ -113,6 +117,6 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, please contact us:</p>
 <ul>
-        <li>By email: mplrewardz@gmail.com</li>
+        <li>By email: rewardz4all@gmail.com</li>
           
         </ul>
